--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "hello-world"
 version = "0.1.0"
-authors = ["Paul Adenot <<paul@paul.cx>>"]
+authors = ["Paul Adenot <paul@paul.cx>"]
 
 [dependencies]
 tokio = "0.1"
 rosc = "0.1"
 futures = "0.1.20"
-error-chain = "0.5"
+log = "0.4.1"
+env_logger = "0.5.10"
