--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,12 @@
 name = "monome-rs"
 version = "0.1.0"
 authors = ["Paul Adenot <paul@paul.cx>"]
+description = "Talk to monome grid devices"
+documentation = "https://docs.rs/monome-rs/"
+repository = "https://github.com/padenot/monome-rs"
+license = "MIT/Apache-2.0"
+readme = "README.md"
+categories = ["multimedia::audio", "hardware-support"]
 
 [lib]
 name = "monome"
