--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ repository = "https://github.com/padenot/monome-rs"
 license = "MIT/Apache-2.0"
 readme = "README.md"
 categories = ["multimedia::audio", "hardware-support"]
+edition = "2018"
 
 [lib]
 name = "monome"
