--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "monome-rs"
-version = "0.4.0"
+version = "1.0.0"
 authors = ["Paul Adenot <paul@paul.cx>"]
-description = "Talk to monome grid devices"
+description = "Talk to monome devices"
 documentation = "https://docs.rs/monome-rs/"
 repository = "https://github.com/padenot/monome-rs"
 license = "MIT/Apache-2.0"
@@ -25,3 +25,7 @@ crossbeam = "0.7"
 env_logger = "0.5"
 num = "0.1"
 rand = "0.5"
+
+[profile.release]
+opt-level = 'z'  # Optimize for size.
+lto = true
